# homework1

./: CMakeLists.txt
.github/workflows/: blank.yml
include/: QuadraticEquation.h
src/: QuadraticEquation.cpp
tests/: CMakeLists.txt  main.cpp
